# apt-update-indicator

./: Settings.ui  indicator.js  meson.build  metadata.json  updateManager.js
debian/: changelog  control  control.in  copyright
po/: LINGUAS  POTFILES.in  apt-update-indicator.pot  tr.po
schemas/: gschemas.compiled  meson.build  org.gnome.shell.extensions.apt-update-indicator.gschema.xml
scripts/: remove-residual.sh  removeauto.sh
